EXAMPLES/ccisnotada.out
ccisnotada.cc: line 50: unterminated comment
"ccisnotada.cc", line 51, char 0: syntax error
Concurrent C errors detected
